Edit landing page

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,13 +2,16 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
+$kaldi-red: #296680
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
+
+h1 h2 h3
+  color: $primary
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -61,10 +64,10 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: #296680
     text-align: center
     -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    box-shadow: inset 0 0 0 2px #296680
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
